<resources>
    <string name="app_name">Test2</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_lenth">more than 6 letters</string>
    <string name="name">Name</string>
    <string name="profile">Profile</string>
    <string name="submit">submit</string>
    <string name="logout">logout</string>
</resources>
