<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.miaor.test2.App.ProfilePage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:id="@+id/Profile_Title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:textSize="@dimen/sizeTitle"
        android:typeface="normal"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/nameText_profile"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/userName_profile"
        android:textSize="16sp"
        android:layout_above="@+id/nameText_profile"
        android:layout_alignLeft="@+id/nameText_profile"
        android:layout_alignStart="@+id/nameText_profile"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submit_profile"
        android:layout_below="@+id/nameText_profile"
        android:layout_alignLeft="@+id/Profile_Title"
        android:layout_alignStart="@+id/Profile_Title"
        android:layout_marginTop="97dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:id="@+id/logout_profile"
        android:layout_below="@+id/submit_profile"
        android:layout_alignLeft="@+id/submit_profile"
        android:layout_alignStart="@+id/submit_profile"/>
</RelativeLayout>
