<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Auth.Register">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:textSize="34sp"
        />

    <EditText
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="20"
        android:id="@+id/email_register"
        android:layout_marginTop="120dp"
        tools:text="rm8g15"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/password_register"
        android:layout_alignStart="@+id/password_register"/>

    <EditText
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_register"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="2dp"
        android:layout_centerHorizontal="true"
        tools:text="123"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/emailText_login"
        android:layout_marginBottom="43dp"
        android:layout_alignBottom="@+id/email_register"
        android:layout_alignLeft="@+id/email_register"
        android:layout_alignStart="@+id/email_register"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/textView2"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/email_register"
        android:layout_alignLeft="@+id/email_register"
        android:layout_alignStart="@+id/email_register"/>

    <Button
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/Register_register"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="\@"
        android:id="@+id/annotation"
        android:layout_alignBottom="@+id/email_register"
        android:layout_toRightOf="@+id/email_register"
        android:layout_toEndOf="@+id/email_register"
        android:layout_marginBottom="12dp"
        android:textSize="18sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailDomain_register"
        tools:text="soton.ac.uk"
        android:layout_above="@+id/textView2"
        android:layout_toRightOf="@+id/annotation"
        android:layout_alignRight="@+id/password_register"
        android:layout_alignEnd="@+id/password_register"
        android:inputType="text"/>

</RelativeLayout>
